[gd_scene load_steps=5 format=2]

[ext_resource path="res://Etc/icon.png" type="Texture" id=2]
[ext_resource path="res://Etc/Main Theme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/controller.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Client.tscn" type="PackedScene" id=5]

[node name="Controller" type="Node2D"]
script = ExtResource( 4 )

[node name="Client" parent="." instance=ExtResource( 5 )]
server_label_path = NodePath("../Control/Server")

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 3 )

[node name="Server" type="Label" parent="Control"]
margin_left = 64.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 132.0
valign = 1
clip_text = true

[node name="Button_A" type="Button" parent="Control"]
margin_left = 496.0
margin_top = 384.0
margin_right = 600.0
margin_bottom = 488.0
focus_mode = 0
enabled_focus_mode = 0
text = "A"

[node name="Button_B" type="Button" parent="Control"]
margin_left = 480.0
margin_top = 240.0
margin_right = 584.0
margin_bottom = 344.0
focus_mode = 0
enabled_focus_mode = 0
text = "B"

[node name="Button_X" type="Button" parent="Control"]
margin_left = 640.0
margin_top = 376.0
margin_right = 744.0
margin_bottom = 480.0
focus_mode = 0
enabled_focus_mode = 0
text = "X"

[node name="Button_Y" type="Button" parent="Control"]
margin_left = 632.0
margin_top = 240.0
margin_right = 736.0
margin_bottom = 344.0
focus_mode = 0
enabled_focus_mode = 0
text = "Y"

[node name="Button_STOP" type="Button" parent="Control"]
margin_left = 808.0
margin_top = 16.0
margin_right = 936.0
margin_bottom = 68.0
focus_mode = 0
enabled_focus_mode = 0
text = "STOP"

[node name="Trigger_L" type="HSlider" parent="Control"]
margin_left = 208.0
margin_top = 320.0
margin_right = 456.0
margin_bottom = 380.0
min_value = -100.0
scrollable = false

[node name="Trigger_R" type="HSlider" parent="Control"]
margin_left = 208.0
margin_top = 448.0
margin_right = 456.0
margin_bottom = 508.0
min_value = -100.0
scrollable = false

[node name="Icon" type="Sprite" parent="."]
position = Vector2( -88, 48 )
texture = ExtResource( 2 )
